02-sg/main.tf
module "db" {
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for DB MySQL Instances"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags =var.common_tags
    sg_name = "db"
}

module "ingress" {
    source = "git::https://github.com/NeelaReddy25/terraform-aws-security-group-pre.git?ref=main"
    project_name = var.project_name
    environment =var.environment
    sg_description = "SG for Ingress controller"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "ingress"
}

module "cluster" {
    source = "git::https://github.com/NeelaReddy25/terraform-aws-security-group-pre.git?ref=main"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for EKS control plane"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "eks-control-plane"
}

module "node" {
    source = "git::https://github.com/NeelaReddy25/terraform-aws-security-group-pre.git?ref=main"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for EKS node"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "eks-node"
}

module "bastion" {
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for Bastion Instances"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "bastion"
}

module "vpn" {
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for VPN Instances"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "vpn"
    ingress_rules = var.vpn_sg_rules
}

#DB is accepting connections from bastion
resource "aws_security_group_rule" "db_bastion" {
    type = "ingress"
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    source_security_group_id = module.bastion.sg_id #source is where you are getting traffic from bastion
    security_group_id = module.db.sg_id 
}

resource "aws_security_group_rule" "db_vpn" {
    type = "ingress"
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    source_security_group_id = module.vpn.sg_id #source is where you are getting traffic from 
    security_group_id = module.db.sg_id 
}

resource "aws_security_group_rule" "bastion_public" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = module.bastion.sg_id 
}

resource "aws_security_group_rule" "cluster_node" {
    type = "ingress"
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    source_security_group_id = module.node.sg_id #source is where you are getting traffic from 
    security_group_id = module.cluster.sg_id 
}

resource "aws_security_group_rule" "node_cluster" {
    type = "ingress"
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    source_security_group_id = module.cluster.sg_id #source is where you are getting traffic from 
    security_group_id = module.node.sg_id 
}

resource "aws_security_group_rule" "node_ingress" {
    type = "ingress"
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    source_security_group_id = module.node.sg_id #source is where you are getting traffic from 
    security_group_id = module.ingress.sg_id 
}

resource "aws_security_group_rule" "db_node" {
    type = "ingress"
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    source_security_group_id = module.node.sg_id #source is where you are getting traffic from 
    security_group_id = module.db.sg_id 
}

resource "aws_security_group_rule" "ingress_public" {
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = module.ingress.sg_id 
}
